/*
 * $Id: ChangeLog,v 1.1637 2003/10/29 16:35:00 toninhofwi Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-30 15:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    * Added '.' as a continuation token in 2nd phase of NextExp().

2003-10-29 14:28 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  - include/struct.ch
  + include/hbstruct.ch
  ! tests/struct.prg
    renamed struct.ch to hbstruct.ch to prevent conflicts with fivewin.

2003-10-29 09:00 GMT+1200 Peter Rees <peter@rees.co.nz>
  * /rtl/console.c
    hb_conDevPos() (DEVPOS())
      Fix compatibility problem for repeated @ nRow,nCol SAY ".." where nRow has the same
      row value and nCol is <= the previous value of nCol
      Should be 100% Clipper (5.2e) compatible now

    HB_FUNC( __EJECT )
     change: hb_fsWrite( hb_set.hb_set_printhan, ( BYTE * ) "\x0C\x0D", 2 );
         to: hb_fsWrite( hb_set.hb_set_printhan, ( BYTE * ) "\x0C", 2 );
     Clipper ( 5.2e) does not send "\x0D"

2003-10-28 00:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Changed hb_ppNextToken() to accept a 2nd paramater sToken (pointer to token to return).
    ! Fixed WorkMarkers() to use hb_ppNextToken() when extracting next stopper.

2003-10-27 13:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    * Added || iLastToken == OPTIONAL to IF_BELONG_LEFT macro to allow Opti[onal] as an array name.

2003-10-27 11:45 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/rtl/tobject.prg
  * include/struct.ch
  * tests/struct.prg
    + Add support for command Structure / Member / EndStructure to create
      objects using Associative Arrays.

2003-10-27 04:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/strcase.c
    * removed unused nLen in str...Upper...()
