@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1637 2003/10/29 16:35:00 toninhofwi Exp $
+ * $Id: ChangeLog,v 1.1638 2003/10/30 23:56:56 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-10-30 20:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    + Added logic to skip literal strings in ConvertPatterns()
+
+  * tests/pp.prg
+    + Added logic to skip literal strings in CompileRule()
 
 2003-10-30 15:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * tests/pp.prg
